# inat-inquire-demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.demo.yml
.github/workflows/: validate.yml
csse-demo-framework/: audience-model.md  demo-artifact-matrix.md  demo-charter.md  evidence-matrix.md  frameword.md
data/evidence/: benchmark-summary.json  metrics-highlight.json  production-readiness.json
docs/: README.md  demo-labels-and-links-review.md  fallback-evidence.md  operations-runbook.md  project-plan.md  technical-reference.md
infra/local/: pipeline-port-8010.override.yaml
portal/: README.md  index.html  package-lock.json  package.json  vite.config.ts
portal/scripts/: visual-check.mjs
portal/src/: App.tsx  api.ts  styles.css
portal/src/components/: ArchitecturePanel.tsx  AudiencePicker.tsx  AuthGate.tsx  BenchmarkPanel.tsx  IsometricScene.tsx  OperationsPanel.tsx  ProductionPanel.tsx  SceneConsole.tsx  SceneExperience.tsx  SceneHeader.tsx  SceneStage.tsx  SearchPanel.tsx  (+2 more)
recordings/metadata/: shot-list.md
scripts/: README.md  bootstrap.sh  check-coverage.py  export-slides.sh  live-ingest-batch.sh  live-pipeline-down.sh  live-pipeline-up.sh  local-live.sh  record-large.sh  seed-hf-inat-sample.py  validate.sh
scripts/lib/: common.sh
server/: README.md  pyproject.toml
server/app/: __init__.py  auth.py  config.py  data.py  main.py  models.py  pipeline.py
server/tests/: helpers.py  test_auth.py  test_config.py  test_data.py  test_main.py  test_pipeline.py
slides/: README.md  inat-inquire-demo.marp.md
(+8 files in other folders)
