[project]
name = "inat-inquire-demo-server"
version = "0.1.0"
description = "Backend-for-frontend for the iNat x INQUIRE demo portal"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
